fix: overlapping nav preventing click on content & header position

--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 20vh;    
-    animation: navFadeIn 0.8s linear;
+    padding-top: 160px;
+    animation: navFadeIn 2s linear;
     &__container{
         width: auto;
     }
