--- a/src/Components/Layout/Header/header.scss
+++ b/src/Components/Layout/Header/header.scss
@@ -13,6 +13,7 @@
     display: block;
     position: fixed;
     animation: navFadeIn 2s linear;
+    height: 0;
     top: 0;
     right: 0;
     left: 0;
@@ -46,7 +47,7 @@
         }
         &-nav{
             position: absolute;
-            height: 100vh;
+            height: 0;
             margin-top: 35px;
             right: 0;
             left: 0;
@@ -148,4 +149,5 @@
     background-color: transparentize($color: black, $amount: 0.95);
     backdrop-filter: blur(5px);
     opacity: 1;
+    height: 100vh !important;
 }
